--- a/changelog/index.html
+++ b/changelog/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="content">
       <ul>
-        <a href="1.0.0.html"><li>Patch 1.0.0</li></a>
+        <a href="1.0.0.html"><li>Patch 1.0.0: The First Update</li></a>
       </ul>
     </div>
   </body>
