--- a/changelog/1.0.0.html
+++ b/changelog/1.0.0.html
@@ -49,7 +49,7 @@
           <ul>
             <li class="none"><img src="https://i.imgur.com/xo0HOJA.png" alt="Image"></li>
             <li>Taming an animal now makes them invulnerable to damage.</li>
-            <li>Hitting a tamed animal will tell you it's owner.</li>
+            <li>Interacting with a tamed animal will tell you it's owner.</li>
           </ul>
         </li>
         <li class="none">Many, many more features are coming. A lot of them are already created, but not in the server yet.</li>
