--- a/changelog/1.0.0.html
+++ b/changelog/1.0.0.html
@@ -6,8 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Patch 1.0.0</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico?v=2" />
   </head>
-  <header>Patch 1.0.0</header>
+  <a href="index.html"><p id="back">Back</p></a>
+  <header>
+    <h1>jadbreaks</h1>
+    <p>Patch 1.0.0</p>
+  </header>
   <body>
     <div class="content">
       <ul>
@@ -52,7 +57,7 @@
             <li>Interacting with a tamed animal will tell you it's owner.</li>
           </ul>
         </li>
-        <li class="none">Many, many more features are coming. A lot of them are already created, but not in the server yet.</li>
+        <li class="none">Many, many more features are coming; most of them are already done, but not in the server yet.</li>
         <li class="none">Tune into the server (hopefully) every friday for a new patch.</li>
         <li class="none">Look at <code>#previews</code> in the Discord for sneak peeks.</li>
       </ul>
