--- a/changelog/index.html
+++ b/changelog/index.html
@@ -6,8 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Changelog</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.ico?v=2" />
   </head>
-  <header>Changelog</header>
+  <header>
+    <h1>Changelog</h1>
+  </header>
   <body>
     <div class="content">
       <ul>
