--- a/changelog/1.0.0.html
+++ b/changelog/1.0.0.html
@@ -36,21 +36,21 @@
         </li>
         <li class="edit">Mobs drop their experience orbs on death despite death reason.</li>
         <li class="edit">
-          Pinging
+          <b>Pinging</b>
           <ul>
             <li class="none"><img src="https://i.imgur.com/VTCIu8N.png" alt="Image"></li>
             <li>You can ping anyone in chat just like in Discord, by typing <code>@name</code></li>
           </ul>
         </li>
         <li class="add">
-          Death Persistence
+          <b>Death Persistence</b>
           <ul>
             <li class="add">Dying no longer resets your health or hunger.</li>
             <li class="add">Dying no longer drops your experience, it now persists after death.</li>
           </ul>
         </li>
         <li class="add">
-          God Pets
+          <b>God Pets</b>
           <ul>
             <li class="none"><img src="https://i.imgur.com/xo0HOJA.png" alt="Image"></li>
             <li>Taming an animal now makes them invulnerable to damage.</li>
