--- a/changelog/index.html
+++ b/changelog/index.html
@@ -9,7 +9,8 @@
     <link rel="icon" href="favicon.ico?v=2" />
   </head>
   <header>
-    <h1>Changelog</h1>
+    <h1>jadbreaks</h1>
+    <p>Changelog</p>
   </header>
   <body>
     <div class="content">
