edit for retard brother

--- a/changelog/1.0.0.html
+++ b/changelog/1.0.0.html
@@ -53,8 +53,9 @@
           <b>God Pets</b>
           <ul>
             <li class="none"><img src="https://i.imgur.com/xo0HOJA.png" alt="Image"></li>
-            <li>Taming an animal now makes them invulnerable to damage.</li>
-            <li>Interacting with a tamed animal will tell you it's owner.</li>
+            <li>Taming an animal now makes them invulnerable any damage except player attack.</li>
+            <li>Any tamed animal will have a high resistance to player damage.</li>
+            <li>Right-clicking a tamed animal will tell you it's owner.</li>
           </ul>
         </li>
         <li class="none">Many, many more features are coming; most of them are already done, but not in the server yet.</li>
