--- a/invite/index.html
+++ b/invite/index.html
@@ -1,6 +1,9 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
+		<style>
+			body { background-color: black; text-align: center; color: white; }
+		</style>
 	</head>
 	<body>
 		<p>You are being redirected to the Discord server.</p>
