--- a/changelog/1.0.1.html
+++ b/changelog/1.0.1.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico?v=2" />
   </head>
+  <a href="index.html"><p id="back">Back</p></a>
   <header>
     <h1>jadbreaks</h1>
     <p>Patch 1.0.1</p>
